--- a/newDesign.css
+++ b/newDesign.css
@@ -49,3 +49,47 @@
 
 }
 
+input[type=text] {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #AE6400;
+    border-radius: 4px;
+}
+input[type=Password] {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #AE6400;
+    border-radius: 4px;
+}
+input[type=Number] ,select , textarea{
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #AE6400;
+    border-radius: 4px;
+}
+#log_in_forms {
+
+      margin-left: %;
+}
+
+.log_in_forms_for_Log_in {
+  position: absolute;
+  top: 20%;
+  left:30%;
+    width:40%;
+    background-color: black;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+    margin-bottom: 1%;
+    border-radius: 10px;
+    padding: 10px;
+
+}
+#log_in_forms2 {
+    margin-left: 20%;
+}
