--- a/newDesign.css
+++ b/newDesign.css
@@ -346,3 +346,23 @@ select {
 .sign_Up h4{
   color:white;
 }
+
+.update_Image_align {
+  position: absolute;
+  top: 13%;
+  left: 35%;
+  background-color: black;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+  margin-left: 0%;
+  margin-bottom: 1%;
+  border-radius: 10px;
+  padding: 30px;
+}
+
+.update_Image_align h2 {
+  color: white;
+}
+.update_Image_align p{
+  color:white;
+}
