--- a/newDesign.css
+++ b/newDesign.css
@@ -366,3 +366,63 @@ select {
 .update_Image_align p{
   color:white;
 }
+
+.join_eventsTable {
+ 
+  background-color: black;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+  margin-bottom: 1%;
+  border-radius: 10px;
+  padding: 50px;
+
+}
+
+.join_eventsTable h2 {
+  color: white;
+}
+.join_eventsTable p{
+  color:white;
+}
+.join_eventsTable h3 {
+  color: white;
+}
+.join_eventsTable h4{
+  color:white;
+}
+
+.LoginPos {
+  position: absolute;
+  top: 65px;
+}
+
+.registerHere{
+  position: absolute;
+  top: 35%;
+  left:65%;
+  color: white;
+}
+
+.my_eventsTable {
+ 
+  background-color: black;
+  color: white;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+  border-radius: 10px;
+    border: none;
+
+}
+
+.my_eventsTable h2 {
+  color: white;
+}
+.my_eventsTable h5{
+  color:white;
+}
+.my_eventsTable h3 {
+  color: white;
+}
+.my_eventsTable h4{
+  color:white;
+}
