--- a/Design.css
+++ b/Design.css
@@ -80,3 +80,100 @@ input[type=Number] ,select , textarea{
 select {
     font-size: 15px;
 }
+.headers {
+    background-color: #000000;
+    color: white;
+    padding: 10px;
+}
+.actions {
+    text-decoration: none;
+    padding: 10px;
+    background-color: #D87B00;
+    color: #FFFFFF;
+    border-radius: 3px;
+    transition: 0.3s;
+}
+.actions:hover {
+    text-decoration: none;
+    padding-top: 15px;
+    background-color: #FF9E1F;
+    color: #FFFFFF;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+.my_events {
+    border-style: dashed;
+    border-color: #7E4700;
+}
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px !important;
+    margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-left .5s;
+    padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+.others {
+  background-color: black;
+  color: white;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+  float: left;
+  margin-left: 1%;
+  margin-bottom: 1%;
+  border-radius: 10px;
+  padding: 5px;
+  align-content: center;
+}
+
+
+#imgblur {
+    transition: 0.01s;
+}
+#imgblur:hover{
+    transition: 0.03s;
+    filter: blur(5px);
+    background-color: #AE6400;
+}
+
