--- a/newDesign.css
+++ b/newDesign.css
@@ -1,52 +1,6 @@
-
-.bodyAdd_image {
-	background-image: url("../images/portfolio_big_05.jpg");
- 	 background-repeat: repeat;
-}
-.bodyChange_payment {
-	background-image: url("../images/trybg.jpg");
- 	 background-repeat: repeat;
-}
-.bodyCreate_event {
-	background-image: url("../images/portfolio_big_01.jpg");
- 	 background-repeat: repeat;
-}
-.bodyJoin_event {
-	background-image: url("../images/portfolio_big_08.jpg");
- 	 background-repeat: repeat;
-}
-.bodyLog_in{
-	background-image: url("../images/portfolio_big_03.jpg");
- 	 background-repeat: repeat;
-}
-.bodyMy_Events{
-	background-image: url("../images/portfolio_big_06.jpg");
- 	 background-repeat: repeat;
-}
-.bodyMy_Joined_Events{
-	background-image: url("../images/portfolio_big_07.jpg");
- 	 background-repeat: repeat;
-}
-
-.bodyUpdate_Events{
-	background-image: url("../images/portfolio_big_05.jpg");
- 	 background-repeat: repeat;
-}
-
-.bodyUpdate_Image{
-	background-image: url("../images/portfolio_big_05.jpg");
- 	 background-repeat: repeat;
-}
-.bodyview_Participants{
-	background-image: url("../images/portfolio_big_08.jpg");
- 	 background-repeat: repeat;
-
-}
-
-.bodysign_Up{
-	background-image: url("../images/portfolio_big_03.jpg");
- 	 background-repeat: repeat;
-
+body {
+  background-image: url("images/trybg.jpg");
+  background-repeat: no-repeat;
 }
 
 input[type=text] {
@@ -73,27 +27,11 @@ input[type=Number] ,select , textarea{
     border-radius: 4px;
 }
 #log_in_forms {
-
-      margin-left: %;
-}
-
-.log_in_forms_for_Log_in {
-  position: absolute;
-  top: 20%;
-  left:30%;
-    width:40%;
-    background-color: black;
-    opacity: 0.9;
-    filter: alpha(opacity=90);
-    margin-bottom: 1%;
-    border-radius: 10px;
-    padding: 10px;
-
+    margin-left: 30%;
 }
 #log_in_forms2 {
     margin-left: 20%;
 }
-
 .button {
     background-color: #AE6400; /* Green */
     border-radius: 10px;
@@ -130,7 +68,6 @@ input[type=Number] ,select , textarea{
     transition: 0.5s;
     color: white;
 }
-
 #error_message {
     color: rgb(255, 255, 255);
     border-radius: 10px;
@@ -147,16 +84,10 @@ select {
     font-size: 15px;
 }
 #odd {
-
-  color: white;
-
- 
+    background-color: #FF9100;
 }
 #even {
-
-  color: white;
- 
-
+    background-color: #FFB049;
 }
 .headers {
     background-color: #000000;
@@ -233,39 +164,34 @@ select {
     .sidenav a {font-size: 18px;}
 }
 .others {
+
   background-color: black;
   color: white;
   opacity: 0.9;
   filter: alpha(opacity=90);
   float: left;
-  align-content: center;
-  border-radius: 50px;
-}
-#bois a{
-    text-decoration: none;
-    color: white;
+}div.bois {
     font-size: 20px;
     width: 30%;
-    padding: 3px;
+    padding: 10px;
     padding-left: 30%;
     padding-right: 30%;
     background-color: black;
+    color: #000000;
     transition: 0.3s;
     
 }
-#bois a:hover {
+div.bois:hover {
     color: white;
     font-size: 20px;
     width: 33%;
-    padding: 3px;
-    padding-top: 12px;
-    padding-left: 37%;
-    padding-right: 37%;
+    padding: 10px;
+    padding-left: 30%;
+    padding-right: 30%;
     background-color: #FF7400;
     transition: 0.3s;
 }
-#bois a:visited {
-    text-decoration: none;
+div.bois:visited {
     font-size: 20px;
     width: 33%;
     padding: 10px;
@@ -273,241 +199,4 @@ select {
     padding-right: 30%;
     color: white;
     transition: 0.3s;
-}
-
-.others2 {
-  background-color: black;
-  opacity: 0.7;
-  filter: alpha(opacity=70);
-  float: left;
-  margin-left: 0%;
-  margin-bottom: 1%;
-  border-radius: 10px;
-  padding: 50px;
-}
-
-.others2 h2 {
-
-  color: white;
-
-}
-.others2 h3 {
-  color:white;
-  
-}
-
-.others2 input {
-  color:black;
-  
-}
-
-.others3 {
-  position: absolute;
-  top:120px;
-  left: 220px;
-  background-color: black;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
-  margin-left: 0%;
-  margin-bottom: 1%;
-  border-radius: 10px;
-  padding: 50px;
-}
-
-.others3 h2 {
-  color: white;
-}
-.others3 p{
-  color:white;
-}
-.others3 h4{
-  color:white;
-}
-
-.sign_Up {
-  position: absolute;
-  top:100px;
-  left: 360px;
-  background-color: black;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
-  margin-left: 0%;
-  margin-bottom: 1%;
-  border-radius: 10px;
-  padding: 50px;
-}
-
-.sign_Up h2 {
-  color: white;
-}
-.sign_Up p{
-  color:white;
-}
-.sign_Up h4{
-  color:white;
-}
-
-.update_Image_align {
-  position: absolute;
-  top: 13%;
-  left: 35%;
-  background-color: black;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
-  margin-left: 0%;
-  margin-bottom: 1%;
-  border-radius: 10px;
-  padding: 30px;
-}
-
-.update_Image_align h2 {
-  color: white;
-}
-.update_Image_align p{
-  color:white;
-}
-
-.join_eventsTable {
- 
-  background-color: black;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
-  margin-bottom: 1%;
-  border-radius: 10px;
-  padding: 50px;
-
-}
-
-.join_eventsTable h2 {
-  color: white;
-}
-.join_eventsTable p{
-  color:white;
-}
-.join_eventsTable h3 {
-  color: white;
-}
-.join_eventsTable h4{
-  color:white;
-}
-
-.LoginPos {
-  position: absolute;
-  top: 65px;
-}
-
-.registerHere{
-  position: absolute;
-  top: 35%;
-  left:65%;
-  color: white;
-}
-
-.my_eventsTable {
- 
-  background-color: black;
-  color: white;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
-  border-radius: 10px;
-    border: none;
-
-}
-
-.my_eventsTable h2 {
-  color: white;
-}
-.my_eventsTable h5{
-  color:white;
-}
-.my_eventsTable h3 {
-  color: white;
-}
-.my_eventsTable h4{
-  color:white;
-}
-
-.my_Joined_EventsTable h2 {
-  color: white;
-}
-.my_Joined_EventsTable h5{
-  color:white;
-}
-.my_Joined_EventsTable h3 {
-  color: white;
-}
-.my_Joined_EventsTable h4{
-  color:white;
-}
-.my_Joined_EventsTable a {
-  color: white;
-}
-
-.my_Joined_EventsTable a:hover {
-  color: white;
-}
-.my_Joined_EventsTable a:visited {
-  color: white;
-}
-
-#fontsALL {
-  font-family: "Open Sans", Times, sans-serif
-}
-.my_Joined_EventsTable {
- 
-  background-color: black;
-  color: white;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
-  border-radius: 10px;
-    border: none;
-
-}
-
-
-.view_ParticipantsTable {
- 
-  background-color: black;
-  color: white;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
-  border-radius: 10px;
-  border: none;
-
-}
-
-.view_ParticipantsTable h2 {
-  color: white;
-}
-.view_ParticipantsTable h5{
-  color:white;
-}
-.view_ParticipantsTable h3 {
-  color: white;
-}
-.view_ParticipantsTable h4{
-  color:white;
-}
-
-.view_ParticipantsTable a {
-  color: white;
-}
-
-.view_ParticipantsTable a:hover {
-  transition: 0.3s;
-  color: #FF7400;
-}
-.view_ParticipantsTable a:visited {
-  color: white;
-}
-
-.admin_table {
- 
-  background-color: black;
-  color: white;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
-  border-radius: 10px;
-  border: none;
-
 }
